--- a/index.html
+++ b/index.html
@@ -5,12 +5,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>World Cup-2023</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- Header area -->
+    <header>
 
+    </header>
+    <!-- Main area -->
+    <main>
+        <section>
+            <div class="container">
+                <div class="left-cont">
+                    <h1>The Greatest show on the earth</h1>
+                    <p>The official home for the world’s most prestigious event</p>
+                    <div class="watch-btn">
+                        <a class="btn" href="#">Watch Live<i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+                <div class="right-cont">
+                    <img src="assets/Banner Image.png" alt="footballer-runi-picture">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="mid-container">
+                <nav class="small-cont">
+                    <ul>
+                        <li><a class="mat" href="">Upcoming Match</a></li>
+                        <li><a class="grp" href="">All Group</a></li>
+                        <li><a class="blg" href="">Blog</a></li>
+                    </ul>
+                </nav>
+                <div class="box-2"></div>
+            </div>
+        </section>
+    </main>
+    <!-- Footer are -->
+    <footer>
+
+    </footer>
+    <script src="https://kit.fontawesome.com/3abd589894.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
