--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                 </div>
             </div>
         </section>
+
         <section>
+            <!-- Side Ber Start -->
             <div class="mid-container">
                 <nav class="small-cont">
                     <ul>
@@ -39,15 +41,76 @@
                         <li><a class="blg" href="">Blog</a></li>
                     </ul>
                 </nav>
-                <div class="box-2"></div>
+                <!-- Side Ber Start -->
+                <!-- Grid Start -->
+                <div class="watch-box">
+                    <div>
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <button>Transfer</button>
+                    <h3>World Cup Qatar 2022 groups</h3>
+                    <div class="icon-box">
+                        <p class="icon"><i class="fa fa-clock"></i> 10h</p>
+                        <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
+                    </div>
+                    <div>
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <button>Transfer</button>
+                    <h3>World Cup Qatar 2022 groups</h3>
+                    <div class="icon-box">
+                        <p class="icon"><i class="fa fa-clock"></i> 10h</p>
+                        <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
+                    </div>
+                    <div>
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <button>Transfer</button>
+                    <h3>World Cup Qatar 2022 groups</h3>
+                    <div class="icon-box">
+                        <p class="icon"><i class="fa fa-clock"></i> 10h</p>
+                        <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
+                    </div>
+                    <div>
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <button>Transfer</button>
+                    <h3>World Cup Qatar 2022 groups</h3>
+                    <div class="icon-box">
+                        <p class="icon"><i class="fa fa-clock"></i> 10h</p>
+                        <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
+                    </div>
+                    <div>
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <button>Transfer</button>
+                    <h3>World Cup Qatar 2022 groups</h3>
+                    <div class="icon-box">
+                        <p class="icon"><i class="fa fa-clock"></i> 10h</p>
+                        <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
+                    </div>
+                    <div>
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <button>Transfer</button>
+                    <h3>World Cup Qatar 2022 groups</h3>
+                    <div class="icon-box">
+                        <p class="icon"><i class="fa fa-clock"></i> 10h</p>
+                        <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
+                    </div>
+                </div>
+                <!-- Grid End -->
             </div>
         </section>
+        <!-- Side Ber Start -->
     </main>
     <!-- Footer are -->
     <footer>
 
     </footer>
+    <!-- Font Awesome Start-->
     <script src="https://kit.fontawesome.com/3abd589894.js" crossorigin="anonymous"></script>
+    <!-- Font Awesome End-->
 </body>
 
 </html>
