--- a/index.html
+++ b/index.html
@@ -44,59 +44,71 @@
                 <!-- Side Ber Start -->
                 <!-- Grid Start -->
                 <div class="watch-box">
-                    <div>
-                        <img src="assets/Blog Image.png" alt="">
+                    <div class="grid">
+                        <div>
+                            <img src="assets/Blog Image.png" alt="">
+                        </div>
+                        <button>Transfer</button>
+                        <h3>World Cup Qatar 2022 groups</h3>
+                        <div class="icon-box">
+                            <p class="icon"><i class="fa fa-clock"></i> 10h</p>
+                            <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
+                        </div>
                     </div>
-                    <button>Transfer</button>
-                    <h3>World Cup Qatar 2022 groups</h3>
-                    <div class="icon-box">
-                        <p class="icon"><i class="fa fa-clock"></i> 10h</p>
-                        <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
+                    <div class="grid">
+                        <div>
+                            <img src="assets/Blog Image.png" alt="">
+                        </div>
+                        <button>Transfer</button>
+                        <h3>World Cup Qatar 2022 groups</h3>
+                        <div class="icon-box">
+                            <p class="icon"><i class="fa fa-clock"></i> 10h</p>
+                            <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
+                        </div>
                     </div>
-                    <div>
-                        <img src="assets/Blog Image.png" alt="">
+                    <div class="grid">
+                        <div>
+                            <img src="assets/Blog Image.png" alt="">
+                        </div>
+                        <button>Transfer</button>
+                        <h3>World Cup Qatar 2022 groups</h3>
+                        <div class="icon-box">
+                            <p class="icon"><i class="fa fa-clock"></i> 10h</p>
+                            <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
+                        </div>
                     </div>
-                    <button>Transfer</button>
-                    <h3>World Cup Qatar 2022 groups</h3>
-                    <div class="icon-box">
-                        <p class="icon"><i class="fa fa-clock"></i> 10h</p>
-                        <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
+                    <div class="grid">
+                        <div>
+                            <img src="assets/Blog Image.png" alt="">
+                        </div>
+                        <button>Transfer</button>
+                        <h3>World Cup Qatar 2022 groups</h3>
+                        <div class="icon-box">
+                            <p class="icon"><i class="fa fa-clock"></i> 10h</p>
+                            <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
+                        </div>
                     </div>
-                    <div>
-                        <img src="assets/Blog Image.png" alt="">
+                    <div class="grid">
+                        <div>
+                            <img src="assets/Blog Image.png" alt="">
+                        </div>
+                        <button>Transfer</button>
+                        <h3>World Cup Qatar 2022 groups</h3>
+                        <div class="icon-box">
+                            <p class="icon"><i class="fa fa-clock"></i> 10h</p>
+                            <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
+                        </div>
                     </div>
-                    <button>Transfer</button>
-                    <h3>World Cup Qatar 2022 groups</h3>
-                    <div class="icon-box">
-                        <p class="icon"><i class="fa fa-clock"></i> 10h</p>
-                        <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
-                    </div>
-                    <div>
-                        <img src="assets/Blog Image.png" alt="">
-                    </div>
-                    <button>Transfer</button>
-                    <h3>World Cup Qatar 2022 groups</h3>
-                    <div class="icon-box">
-                        <p class="icon"><i class="fa fa-clock"></i> 10h</p>
-                        <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
-                    </div>
-                    <div>
-                        <img src="assets/Blog Image.png" alt="">
-                    </div>
-                    <button>Transfer</button>
-                    <h3>World Cup Qatar 2022 groups</h3>
-                    <div class="icon-box">
-                        <p class="icon"><i class="fa fa-clock"></i> 10h</p>
-                        <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
-                    </div>
-                    <div>
-                        <img src="assets/Blog Image.png" alt="">
-                    </div>
-                    <button>Transfer</button>
-                    <h3>World Cup Qatar 2022 groups</h3>
-                    <div class="icon-box">
-                        <p class="icon"><i class="fa fa-clock"></i> 10h</p>
-                        <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
+                    <div class="grid">
+                        <div>
+                            <img src="assets/Blog Image.png" alt="">
+                        </div>
+                        <button>Transfer</button>
+                        <h3>World Cup Qatar 2022 groups</h3>
+                        <div class="icon-box">
+                            <p class="icon"><i class="fa fa-clock"></i> 10h</p>
+                            <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
+                        </div>
                     </div>
                 </div>
                 <!-- Grid End -->
@@ -106,7 +118,18 @@
     </main>
     <!-- Footer are -->
     <footer>
-
+        <div class="f-container">
+            <div class="goal">Goal</div>
+            <hr>
+            <div class="contact">
+                <a href="#">Contact Us</a>
+                <a href="#">Terms of Service</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Privacy Settings</a>
+                <a href="#">Goal App</a>
+                <a href="#">Goal Live</a>
+            </div>
+        </div>
     </footer>
     <!-- Font Awesome Start-->
     <script src="https://kit.fontawesome.com/3abd589894.js" crossorigin="anonymous"></script>
