--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
                 </div>
             </div>
         </section>
-
+        <section>
+            <nav class="tab-cont">
+                <a class="mat" href="">Upcoming Match</a>
+                <a class="grp" href="">All Group</a>
+                <a class="blg" href="">Blog</a>
+            </nav>
+        </section>
         <section>
             <!-- Side Ber Start -->
             <div class="mid-container">
@@ -113,6 +119,9 @@
                 </div>
                 <!-- Grid End -->
             </div>
+            <div class="view">
+                <button class="blog-1">View All</button>
+            </div>
         </section>
         <!-- Side Ber Start -->
     </main>
@@ -126,8 +135,8 @@
                 <a href="#">Terms of Service</a>
                 <a href="#">Privacy Policy</a>
                 <a href="#">Privacy Settings</a>
-                <a href="#">Goal App</a>
-                <a href="#">Goal Live</a>
+                <a class="app" href="#">Goal App</a>
+                <a class="live" href="#">Goal Live</a>
             </div>
         </div>
     </footer>
