--- a/link/index.html
+++ b/link/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Cup-2023</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="assets/icon7.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/icon7.svg" type="image/x-icon">
 </head>
 
 <body>
@@ -27,16 +27,9 @@
                     </div>
                 </div>
                 <div class="right-cont">
-                    <img src="assets/Banner Image.png" alt="footballer-runi-picture">
+                    <img src="/assets/Banner Image.png" alt="footballer-runi-picture">
                 </div>
             </div>
-        </section>
-        <section>
-            <nav class="tab-cont">
-                <a class="mat" href="">Upcoming Match</a>
-                <a class="grp" href="">All Group</a>
-                <a class="blg" href="">Blog</a>
-            </nav>
         </section>
         <section>
             <!-- Side Ber Start -->
@@ -52,76 +45,85 @@
                 <!-- Grid Start -->
                 <div class="watch-box">
                     <div class="grid">
-                        <div>
-                            <img src="assets/Blog Image.png" alt="">
+                        <div class="flag">
+                            <div>
+                                <img src="/assets/germany Flag.png" alt="">
+                            </div>
+                            <h3>VS</h3>
+                            <div>
+                                <img src="/assets/Flag.png" alt="">
+                            </div>
                         </div>
-                        <button>Transfer</button>
-                        <h3>World Cup Qatar 2022 groups</h3>
-                        <div class="icon-box">
-                            <p class="icon"><i class="fa fa-clock"></i> 10h</p>
-                            <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
-                        </div>
+                        <h2>Germany VS France</h2>
+                        <p class="time">April 01, 2023 10.00 AM</p class="time">
                     </div>
                     <div class="grid">
-                        <div>
-                            <img src="assets/Blog Image.png" alt="">
+                        <div class="flag">
+                            <div>
+                                <img src="/assets/Flag.png" alt="">
+                            </div>
+                            <h3>VS</h3>
+                            <div>
+                                <img src="/assets/germany Flag.png" alt="">
+                            </div>
                         </div>
-                        <button>Transfer</button>
-                        <h3>World Cup Qatar 2022 groups</h3>
-                        <div class="icon-box">
-                            <p class="icon"><i class="fa fa-clock"></i> 10h</p>
-                            <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
-                        </div>
+                        <h2>France VS Germany</h2>
+                        <p class="time">April 03, 2023 11.00 AM</p class="time">
                     </div>
                     <div class="grid">
-                        <div>
-                            <img src="assets/Blog Image.png" alt="">
+                        <div class="flag">
+                            <div>
+                                <img src="/assets/germany Flag.png" alt="">
+                            </div>
+                            <h3>VS</h3>
+                            <div>
+                                <img src="/assets/Flag.png" alt="">
+                            </div>
                         </div>
-                        <button>Transfer</button>
-                        <h3>World Cup Qatar 2022 groups</h3>
-                        <div class="icon-box">
-                            <p class="icon"><i class="fa fa-clock"></i> 10h</p>
-                            <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
-                        </div>
+                        <h2>Germany VS France</h2>
+                        <p class="time">April 05, 2023 12.36 AM</p class="time">
                     </div>
                     <div class="grid">
-                        <div>
-                            <img src="assets/Blog Image.png" alt="">
+                        <div class="flag">
+                            <div>
+                                <img src="/assets/Flag.png" alt="">
+                            </div>
+                            <h3>VS</h3>
+                            <div>
+                                <img src="/assets/germany Flag.png" alt="">
+                            </div>
                         </div>
-                        <button>Transfer</button>
-                        <h3>World Cup Qatar 2022 groups</h3>
-                        <div class="icon-box">
-                            <p class="icon"><i class="fa fa-clock"></i> 10h</p>
-                            <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
-                        </div>
+                        <h2>France VS Germany</h2>
+                        <p class="time">April 08, 2023 10.30 PM</p class="time">
                     </div>
                     <div class="grid">
-                        <div>
-                            <img src="assets/Blog Image.png" alt="">
+                        <div class="flag">
+                            <div>
+                                <img src="/assets/germany Flag.png" alt="">
+                            </div>
+                            <h3>VS</h3>
+                            <div>
+                                <img src="/assets/Flag.png" alt="">
+                            </div>
                         </div>
-                        <button>Transfer</button>
-                        <h3>World Cup Qatar 2022 groups</h3>
-                        <div class="icon-box">
-                            <p class="icon"><i class="fa fa-clock"></i> 10h</p>
-                            <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
-                        </div>
+                        <h2>Germany VS France</h2>
+                        <p class="time">April 12, 2023 1.00 AM</p class="time">
                     </div>
                     <div class="grid">
-                        <div>
-                            <img src="assets/Blog Image.png" alt="">
+                        <div class="flag">
+                            <div>
+                                <img src="/assets/Flag.png" alt="">
+                            </div>
+                            <h3>VS</h3>
+                            <div>
+                                <img src="/assets/germany Flag.png" alt="">
+                            </div>
                         </div>
-                        <button>Transfer</button>
-                        <h3>World Cup Qatar 2022 groups</h3>
-                        <div class="icon-box">
-                            <p class="icon"><i class="fa fa-clock"></i> 10h</p>
-                            <p class="icon"><i class="fa fa-comment-dots"></i> 10h</p>
-                        </div>
+                        <h2>France VS Germany</h2>
+                        <p class="time">April 15, 2023 2.00 AM</p class="time">
                     </div>
                 </div>
                 <!-- Grid End -->
-            </div>
-            <div class="view">
-                <button class="blog-1">View All</button>
             </div>
         </section>
         <!-- Side Ber Start -->
@@ -138,12 +140,6 @@
                 <a href="#">Privacy Settings</a>
                 <a class="app" href="#">Goal App</a>
                 <a class="live" href="#">Goal Live</a>
-            </div>
-            <div class="social">
-                <a href="https://www.facebook.com/mamuneub" target="_blank"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="https://www.linkedin.com/in/muhammad-mamunur-roshid-293995b1/" target="_blank"><i
-                        class="fa fa-linkedin"></i></a>
             </div>
         </div>
     </footer>
