--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </section>
         <section>
             <nav class="tab-cont">
-                <a class="mat" href="">Upcoming Match</a>
+                <a class="mat" href="link/index.html">Upcoming Match</a>
                 <a class="grp" href="">All Group</a>
                 <a class="blg" href="">Blog</a>
             </nav>
