--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </section>
         <section>
             <nav class="tab-cont">
-                <a class="mat" href="link/index.html">Upcoming Match</a>
+                <a class="mat" href="index-1.html">Upcoming Match</a>
                 <a class="grp" href="">All Group</a>
                 <a class="blg" href="">Blog</a>
             </nav>
@@ -43,7 +43,7 @@
             <div class="mid-container">
                 <nav class="small-cont">
                     <ul>
-                        <li><a class="mat" href="link/index.html">Upcoming Match</a></li>
+                        <li><a class="mat" href="index-1.html">Upcoming Match</a></li>
                         <li><a class="grp" href="">All Group</a></li>
                         <li><a class="blg" href="">Blog</a></li>
                     </ul>
