--- a/index-1.html
+++ b/index-1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Cup-2023</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-1.css">
     <link rel="shortcut icon" href="/assets/icon7.svg" type="image/x-icon">
 </head>
 
@@ -47,11 +47,13 @@
                     <div class="grid">
                         <div class="flag">
                             <div>
-                                <img src="/assets/germany Flag.png" alt="">
+                                <img src="assets/germany Flag.png" alt="">
                             </div>
-                            <h3>VS</h3>
                             <div>
-                                <img src="/assets/Flag.png" alt="">
+                                <h3>VS</h3>
+                            </div>
+                            <div>
+                                <img src="assets/Flag.png" alt="">
                             </div>
                         </div>
                         <h2>Germany VS France</h2>
@@ -60,11 +62,11 @@
                     <div class="grid">
                         <div class="flag">
                             <div>
-                                <img src="/assets/Flag.png" alt="">
+                                <img src="assets/Flag.png" alt="">
                             </div>
                             <h3>VS</h3>
                             <div>
-                                <img src="/assets/germany Flag.png" alt="">
+                                <img src="assets/germany Flag.png" alt="">
                             </div>
                         </div>
                         <h2>France VS Germany</h2>
@@ -73,11 +75,11 @@
                     <div class="grid">
                         <div class="flag">
                             <div>
-                                <img src="/assets/germany Flag.png" alt="">
+                                <img src="assets/germany Flag.png" alt="">
                             </div>
                             <h3>VS</h3>
                             <div>
-                                <img src="/assets/Flag.png" alt="">
+                                <img src="assets/Flag.png" alt="">
                             </div>
                         </div>
                         <h2>Germany VS France</h2>
@@ -86,11 +88,11 @@
                     <div class="grid">
                         <div class="flag">
                             <div>
-                                <img src="/assets/Flag.png" alt="">
+                                <img src="assets/Flag.png" alt="">
                             </div>
                             <h3>VS</h3>
                             <div>
-                                <img src="/assets/germany Flag.png" alt="">
+                                <img src="assets/germany Flag.png" alt="">
                             </div>
                         </div>
                         <h2>France VS Germany</h2>
@@ -99,11 +101,11 @@
                     <div class="grid">
                         <div class="flag">
                             <div>
-                                <img src="/assets/germany Flag.png" alt="">
+                                <img src="assets/germany Flag.png" alt="">
                             </div>
                             <h3>VS</h3>
                             <div>
-                                <img src="/assets/Flag.png" alt="">
+                                <img src="assets/Flag.png" alt="">
                             </div>
                         </div>
                         <h2>Germany VS France</h2>
@@ -112,11 +114,11 @@
                     <div class="grid">
                         <div class="flag">
                             <div>
-                                <img src="/assets/Flag.png" alt="">
+                                <img src="assets/Flag.png" alt="">
                             </div>
                             <h3>VS</h3>
                             <div>
-                                <img src="/assets/germany Flag.png" alt="">
+                                <img src="assets/germany Flag.png" alt="">
                             </div>
                         </div>
                         <h2>France VS Germany</h2>
