--- a/index-1.html
+++ b/index-1.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Cup-2023</title>
     <link rel="stylesheet" href="style-1.css">
-    <link rel="shortcut icon" href="/assets/icon7.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/icon7.svg" type="image/x-icon">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
                     </div>
                 </div>
                 <div class="right-cont">
-                    <img src="/assets/Banner Image.png" alt="footballer-runi-picture">
+                    <img src="assets/Banner Image.png" alt="footballer-runi-picture">
                 </div>
             </div>
         </section>
